[tool.poetry]
name = "cargurus-ca"
version = "0.1.0"
description = ""
authors = ["Guilherme Rodrigues <guirodrigues.gor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pydantic = "2.10.6"
ftfy = "6.3.1"
basicauth = "1.0.0"
bs4 = "0.0.2"
unidecode = "1.3.8"
webdriver-manager = "4.0.2"
selenium = "4.30.0"
backoff = "2.2.1"
lxml = "5.3.0"
pandas = "2.2.3"
pycountry = "24.6.1"
pycountry-convert = "0.7.2"
businesstimedelta = "1.0.1"
more-itertools = "10.6.0"
workalendar = "17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
